--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "newrelic": "^7.5.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
   },
